# glacial

./: .gitignore  .markdown-link-check.json  .prettierignore  CONTRIBUTING.md  CRUSH.md  README.md  biome.json  crush.json  cspell.yaml  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.cfg  tsconfig.json
.helix/: languages.toml
scripts/flake/: build.nix  check.nix  composition.nix  dev.nix  docs.nix  javascript-deps-hash.txt  javascript.nix  playwright.nix  python.nix  synthesis.nix
src/composition/: cspell.yaml  package.json  tsconfig.json  tsup.config.json
src/composition/src/: audio.ts  index.ts  sounds.ts  strudel.d.ts
src/orchestration/: pyproject.toml
src/orchestration/src/glacial_orchestration/: __init__.py  __main__.py
src/synthesis/: cspell.yaml  pyproject.toml
src/synthesis/src/glacial_synthesis/: __init__.py  __main__.py
