[project]
name = "glacial-synthesis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "audiocraft>=1.3.0",
  "numpy<2",
  "soundfile>=0.13.1",
  "torch>=2.1.0",
  "torchaudio>=2.1.0",
  "transformers==4.31.0",
  "typer>=0.17.3",
]

[tool.uv.sources]
torch = [{ index = "torch-cuda" }]
torchaudio = [{ index = "torch-cuda" }]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
glacial-synthesis = "glacial_synthesis:main"
